refactor: change in managing bookshelves